--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                                     <p class="text-muted-foreground">&ensp;</p>
                                 </div>
                             </a>
-                            <a class="group overflow-hidden relative flex flex-col gap-y-3 rounded-2xl border border-border bg-primary-foreground transition-all hover:border-foreground/25 hover:shadow-sm" data-fancybox="gallery" data-src="./assets/img/anh4.jpg">
+                            <a class="group overflow-hidden relative flex flex-col gap-y-3 rounded-2xl border border-border bg-primary-foreground transition-all hover:border-foreground/25 hover:shadow-sm" data-fancybox="gallery" data-src="./assets/img/anh4.JPG">
                                 <img src="./assets/img/anh4.jpg" alt="Img" class="absolute top-0 h-full w-full object-cover">
                                 <div class="z-10 flex flex-col gap-y-0.5 px-5 pb-4 pt-24">
                                     <h2 class="text-lg font-medium">&ensp;</h2>
