Replace bank icon image in index.html

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                 <div class="relative flex flex-row items-center gap-x-4 px-2 py-1.5 transition-all">
                                     <div class="absolute -inset-0 z-10 rounded-lg border border-border bg-muted opacity-0 transition-all group-hover:opacity-50">
                                     </div>
-                                    <img src="./assets/img/icon/bidv.jpg" class="z-20 h-10 w-10 rounded-lg bg-muted p-2" alt="Vietinbank">
+                                    <img src="./assets/img/icon/mb2.png" class="z-20 h-10 w-10 rounded-lg bg-muted p-2" alt="Vietinbank">
                                     <div class="z-20 flex flex-col">
                                         <div class="font-medium">DOAN CONH SINH <i data-ws-copy="DOAN CONH SINH" class="ri-file-copy-line text-muted-foreground cursor-pointer"></i>
                                         </div>
