--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:image" content="./res/v5/img/bg3.webp">
     <!-- <meta property="og:url" content="https://doancongsinh.id.vn"> -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.min.css" rel="stylesheet">
-    <link rel="shortcut icon" href=".assets/img/icon.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/img/icon.jpg" type="image/x-icon">
     <meta name="og:description" content="Doãn Công Sinh – Trang web profile của Công Sinh, liên hệ ngay">
     <link rel="stylesheet" href="./assets/css/style.css?v=3.10">
     <link rel="stylesheet" href="./assets/css/fuiToast.min.css">
@@ -88,7 +88,7 @@
                     </div>
                     <div class="flex flex-col items-center gap-y-4">
                         <h1 class="text-3xl font-bold flex items-center">𝓓𝓸𝓪𝓷 𝓒𝓸𝓷𝓰 𝓢𝓲𝓷𝓱 <img class="blue-tick ml-2" src="./assets/img/icon/tick.png"></h1>
-                        <p>Thầm nhớ <span class="bg-primary-foreground rounded text-transparent hover:text-inherit transition-colors cursor-pointer">
+                        <p>Rụt rè trước người mình thích <span class="bg-primary-foreground rounded text-transparent hover:text-inherit transition-colors cursor-pointer">
                                 .........</span></p>
                         <div class="flex flex-wrap justify-center gap-x-7 gap-y-3">
                             <div class="flex flex-row items-center justify-center gap-x-2">
@@ -127,7 +127,7 @@
                             <p>I enjoy overthinking.</p>
 
                             <hr>
-                            <p>您好，我的名字是 CongSinh。我是一位程式設計愛好者，擁有 Java、HTML/CSS/JS 和 C# 的經驗。當我不寫程式碼時，我會透過上健身房來保持健康和平衡精力，也會玩遊戲放鬆心情，特別的是，我喜歡走進廚房紓解壓力，享受烹飪的樂趣。
+                            <p>你好，我是 CngSinh。 我是一名热衷编程的人，目前正在学习 Java、HTML/CSS/JS 和 C#。 的經驗。當我不寫程式碼時，我會透過上健身房來保持健康和平衡精力，也會玩遊戲放鬆心情，特別的是，我喜歡走進廚房紓解壓力，享受烹飪的樂趣。
                             </p>
                             <p>我喜歡深入思考。</p>
                 </section>
@@ -158,7 +158,7 @@
                                     <div class="z-20 flex flex-col">
                                         <div class="font-medium">DOAN CONH SINH <i data-ws-copy="DOAN CONH SINH" class="ri-file-copy-line text-muted-foreground cursor-pointer"></i>
                                         </div>
-                                        <div class="font-normal text-muted-foreground">0369590428<i data-ws-copy="0369590428" class="ri-file-copy-line cursor-pointer"></i>
+                                        <div class="font-normal text-muted-foreground">0369590428 <i data-ws-copy="0369590428" class="ri-file-copy-line cursor-pointer"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -193,7 +193,7 @@
                                     <p class="text-muted-foreground">&ensp;</p>
                                 </div>
                             </a>
-                            <a class="group overflow-hidden relative flex flex-col gap-y-3 rounded-2xl border border-border bg-primary-foreground transition-all hover:border-foreground/25 hover:shadow-sm" data-fancybox="gallery" data-src="./assets/img/anh4.JPG">
+                            <a class="group overflow-hidden relative flex flex-col gap-y-3 rounded-2xl border border-border bg-primary-foreground transition-all hover:border-foreground/25 hover:shadow-sm" data-fancybox="gallery" data-src="./assets/img/anh4.jpg">
                                 <img src="./assets/img/anh4.jpg" alt="Img" class="absolute top-0 h-full w-full object-cover">
                                 <div class="z-10 flex flex-col gap-y-0.5 px-5 pb-4 pt-24">
                                     <h2 class="text-lg font-medium">&ensp;</h2>
